package home.looping;

public class Main {

    public static void main(String[] args) {
        algorithmLibrary test = new algorithmLibrary();
        test.number = 15;
        System.out.println("\n");
        test.leftTriangle();
        System.out.println("\n");
        test.rightTriangle();
        System.out.println("\n");
        test.invertedLeftTriangle();
        System.out.println("\n");
        test.invertedRightTriangle();
        System.out.println("\n");
    }
}
